[package]
name = "proto"
version = "0.1.0"
edition = "2021"
publish = false

[features]
cpal = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
anyhow = "1.0"
rtrb = "0.2"
parking_lot="0.12.1"
midi-types="0.1.7"
